--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-oo-modifiers": "^0.5.0",
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.12.0",
@@ -47,7 +48,9 @@
     "eslint-plugin-ember": "^6.2.0",
     "eslint-plugin-node": "^9.0.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.4"
+    "qunit-dom": "^0.8.4",
+    "husky": "3.0.5",
+    "lint-staged": "9.2.5"
   },
   "engines": {
     "node": "8.* || >= 10.*"
