--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "dependencies": {
+    "babel-eslint": "^10.0.3",
     "ember-cli-babel": "^7.7.3"
   },
   "devDependencies": {
@@ -61,10 +62,10 @@
     "ember-try": "^1.0.0",
     "eslint-plugin-ember": "^6.2.0",
     "eslint-plugin-node": "^9.0.1",
-    "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.4",
     "husky": "3.0.5",
-    "lint-staged": "9.2.5"
+    "lint-staged": "9.2.5",
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.8.4"
   },
   "engines": {
     "node": "8.* || >= 10.*"
